# lr

./: .gitignore  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
clr/: Cargo.toml  README.md
clr/bobblehead/src/: main.rs
clr/clr/tests/: cli.rs
clr/rvrs/src/: main.rs
clr/toilet/src/: main.rs
cool-bear-async-stuff/: Cargo.toml  README.md
dpc/: Cargo.toml  README.md  out.md
dpc/src/: main.rs  test.rs  util.rs
night-crab/: README.md
